--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "python.analysis.extraPaths": [
         "D:\\工程\\AstrBot\\astrbot\\api",
         "D:\\工程\\AstrBot"
-    ]
+    ],
+    "marscode.codeCompletionPro": {
+        "enableCodeCompletionPro": false
+    },
+    "marscode.enableInlineCommand": true
 }
